[gd_scene load_steps=8 format=3 uid="uid://djwuikjndsg7f"]

[ext_resource type="Script" path="res://Scenes/DragAndDropImport/DragAndDropImport.gd" id="1_mtba6"]
[ext_resource type="FontFile" uid="uid://jopwntlmasur" path="res://Scenes/ofont.ru_Pixeloid Sans.ttf" id="2_0li0i"]

[sub_resource type="LabelSettings" id="LabelSettings_m6hsx"]
font_size = 32

[sub_resource type="LabelSettings" id="LabelSettings_xtkkx"]
font_size = 40

[sub_resource type="LabelSettings" id="LabelSettings_2vvjh"]
font_size = 22

[sub_resource type="LabelSettings" id="LabelSettings_pu0o1"]
font_size = 20
font_color = Color(0.882353, 0.0235294, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_y6pn3"]
font_size = 24

[node name="DragAndDropImport" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mtba6")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
offset_right = 1152.0
offset_bottom = 648.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Text" type="Label" parent="VBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -135.5
offset_top = -61.0
offset_right = 135.5
offset_bottom = -38.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_0li0i")
text = "Перетащите сюда фотографию"
label_settings = SubResource("LabelSettings_m6hsx")

[node name="Panel" type="Panel" parent="VBoxContainer/Panel"]
layout_mode = 0
offset_left = 2.0
offset_top = 4.0
offset_right = 282.0
offset_bottom = 346.0

[node name="Label" type="Label" parent="VBoxContainer/Panel/Panel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
theme_override_fonts/font = ExtResource("2_0li0i")
text = "Фотография"
label_settings = SubResource("LabelSettings_xtkkx")

[node name="Image" type="Sprite2D" parent="VBoxContainer/Panel/Panel"]
position = Vector2(140, 200)
scale = Vector2(10, 10)

[node name="Label" type="Label" parent="VBoxContainer/Panel"]
layout_mode = 0
offset_left = 936.0
offset_top = 16.0
offset_right = 1145.0
offset_bottom = 48.0
theme_override_fonts/font = ExtResource("2_0li0i")
text = "Автор: TruePaInt"
label_settings = SubResource("LabelSettings_2vvjh")

[node name="LinkButton" type="LinkButton" parent="VBoxContainer/Panel/Label"]
layout_mode = 0
offset_top = 30.0
offset_right = 75.0
offset_bottom = 53.0
scale = Vector2(1.25, 1.25)
theme_override_fonts/font = ExtResource("2_0li0i")
text = "YouTube"
uri = "https://www.youtube.com/channel/UCPC2lqf1h5pcYXAMeWFdDxQ"

[node name="LinkButton2" type="LinkButton" parent="VBoxContainer/Panel/Label"]
layout_mode = 0
offset_top = 60.0
offset_right = 75.0
offset_bottom = 83.0
scale = Vector2(1.25, 1.25)
theme_override_fonts/font = ExtResource("2_0li0i")
text = "Discord"
uri = "https://discord.gg/ThuZmGmp"

[node name="LinkButton3" type="LinkButton" parent="VBoxContainer/Panel/Label"]
layout_mode = 0
offset_top = 90.0
offset_right = 75.0
offset_bottom = 113.0
scale = Vector2(1.25, 1.25)
theme_override_fonts/font = ExtResource("2_0li0i")
text = "donationalerts"
uri = "https://www.donationalerts.com/r/truepaint"

[node name="erors" type="Label" parent="VBoxContainer/Panel"]
layout_mode = 0
offset_left = 443.0
offset_top = 161.0
offset_right = 755.0
offset_bottom = 189.0
theme_override_fonts/font = ExtResource("2_0li0i")
label_settings = SubResource("LabelSettings_pu0o1")

[node name="Panel2" type="Panel" parent="VBoxContainer"]
layout_mode = 2

[node name="TextEdit" type="TextEdit" parent="VBoxContainer/Panel2"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -239.0
offset_top = -305.0
offset_right = 572.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 0
text = "											А после скопируйте отсюда текст"

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_top = 345.0
offset_right = 337.0
offset_bottom = 644.0

[node name="ColorRect" type="ColorRect" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.427451, 0.427451, 0.427451, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("2_0li0i")
text = "Параметры:"
label_settings = SubResource("LabelSettings_y6pn3")

[node name="GrayPhoto" type="CheckButton" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_0li0i")
text = "Чёрно-белая фотография"

[node name="TextCount" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_0li0i")
text = "42/6000"

[node name="ColorButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_0li0i")
text = "[color][/color]"

[node name="ColorPickerButton" type="ColorPickerButton" parent="Panel/VBoxContainer/ColorButton"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -67.0
offset_top = -15.5
offset_bottom = 15.5
grow_horizontal = 0
grow_vertical = 2
text = "[color=]"
edit_alpha = false

[node name="Bold" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_0li0i")
text = "[bold][/bold]"

[node name="Head" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_0li0i")
text = "[head=][/head]"

[node name="HeadSize" type="LineEdit" parent="Panel/VBoxContainer/Head"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -87.0
offset_top = -17.0
offset_right = 1.0
offset_bottom = 14.0
grow_horizontal = 0
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_0li0i")
text = "2"

[node name="Italic" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_0li0i")
text = "[italic][/italic]"

[node name="BoldItalic" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_0li0i")
text = "[bullet]"

[node name="Select" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_0li0i")
text = "Копировать"

[connection signal="text_changed" from="VBoxContainer/Panel2/TextEdit" to="." method="_on_text_edit_text_changed"]
[connection signal="toggled" from="Panel/VBoxContainer/GrayPhoto" to="." method="_on_gray_photo_toggled"]
[connection signal="pressed" from="Panel/VBoxContainer/ColorButton" to="." method="_on_color_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Bold" to="." method="_on_bold_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Head" to="." method="_on_head_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Italic" to="." method="_on_italic_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/BoldItalic" to="." method="_on_bold_italic_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Select" to="." method="_on_select_pressed"]
